# rust-tuple-destructure

./: Cargo.toml  README.md
src/: destructure.rs  destructure_custom_type.rs  destructure_ref.rs  example.rs  intro.rs  main.rs
